@@ -18,7 +18,7 @@ AC_CONFIG_HEADER([config.h])
 #
 GWENHYWFAR_VERSION_MAJOR=1
 GWENHYWFAR_VERSION_MINOR=13
-GWENHYWFAR_VERSION_PATCHLEVEL=1
+GWENHYWFAR_VERSION_PATCHLEVEL=2
 GWENHYWFAR_VERSION_BUILD=0
 dnl "stable", "rcX", "betaX", "cvs"
 GWENHYWFAR_VERSION_TAG="stable"
@@ -31,7 +31,7 @@ GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$
 # SO version for Gwenhywfar
 #
 GWENHYWFAR_SO_CURRENT="30"
-GWENHYWFAR_SO_REVISION="2"
+GWENHYWFAR_SO_REVISION="3"
 GWENHYWFAR_SO_AGE="13"
 GWENHYWFAR_SO_EFFECTIVE="`echo \$(($GWENHYWFAR_SO_CURRENT-$GWENHYWFAR_SO_AGE))`"
 
