@@ -1,5 +1,15 @@
 
 ===========================================================================
+MARK: released gwenhywfar-1.13.2 (2005/05/25)
+===========================================================================
+
+
+2005/05/25: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- fixed GWEN_DB_VariableExists(): Now works with paths as well
+
+
+===========================================================================
 MARK: released gwenhywfar-1.13.1 (2005/05/24)
 ===========================================================================
 
